[ci skip] Update translations (Afrikaans)

--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -15,13 +15,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appearance">Voorkoms</string>
     <string name="share">Deel</string>
     <string name="search">Soek</string>
+    <string name="editor">Redigeerder</string>
     <string name="about">Omtrent</string>
+    <string name="create">Skep</string>
+    <string name="contributors">Bydraers</string>
+    <string name="licenses">Lisensies</string>
     <string name="changelog">Verandering-log</string>
+    <string name="show_license_of_the_app">Toon lisensie van die app</string>
+    <string name="show_third_party_licenses">Wys 3de partylisensies</string>
+    <string name="language_change_restart_description">Verander taal van hierdie app. Herbegin app vir veranderinge wat in werking tree</string>
     <string name="language">Taal</string>
+    <string name="size">Grootte</string>
+    <string name="contribute">Bydra</string>
     <string name="donate">Skenk</string>
+    <string name="exit">Gaan Uit</string>
     <string name="more">Meer</string>
+    <string name="help">Hulp</string>
+    <string name="main_view">Hoofaansig</string>
+    <string name="other">Ander</string>
     <string name="general">Algemeen</string>
     <string name="default_">Verstek</string>
+    <string name="open_source_licenses">Oopbronlisensies</string>
+    <string name="rate_this_app">Beoordeel hierdie toepassing</string>
+    <string name="translate">Vertaal</string>
+    <string name="more_info_and_help">Meer inligting en hulp</string>
     <string name="miscellaneous">Diverse</string>
     <string name="close">Sluit</string>
     <string name="cancel">Kanselleer</string>
