--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -40,7 +40,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share">Zdieľať</string>
     <string name="search">Hľadať</string>
     <string name="display_converted_markup">Zobraziť konvertovaný markup</string>
-    <string name="editor">Editor</string>
+    <string name="editor">Uprav</string>
     <string name="folders">Priečinky</string>
     <string name="files">Súbory</string>
     <string name="document">Dokumenty</string>
@@ -84,8 +84,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_with">Otvoriť použitím</string>
     <string name="sort_by">Zoradiť podľa</string>
     <string name="deleteme____1">Názov</string>
+    <string name="size">Veľkosť</string>
+    <string name="contribute">Prispejte</string>
+    <string name="donate">Podporiť</string>
+    <string name="exit">Skončiť</string>
+    <string name="more">Viac</string>
+    <string name="help">Nápoveda</string>
     <string name="add_task">Pridaj ulohu</string>
     <string name="add_x_witharg">Pridaj %s</string>
+    <string name="main_view">Hlavné zobrazenie</string>
+    <string name="other">Ostatné</string>
+    <string name="general">Všeobecné</string>
+    <string name="open_source_licenses">Otvoriť zdroj licencie</string>
+    <string name="rate_this_app">Ohodnotiť aplikáciu</string>
+    <string name="translate">Preložiť</string>
+    <string name="more_info_and_help">Viac info a pomoc</string>
+    <string name="report_bugs">Nahlásiť chyby</string>
+    <string name="join_community">Pripojte sa ku komunite</string>
+    <string name="bug_reports_suggest_improvements">Poskytnite spätnú väzbu, nahláste chyby alebo navrhnite vylepšenia</string>
+    <string name="help_translating_this_app">Preložte túto aplikáciu do iných jazykov</string>
+    <string name="source_code">Zdrojový kód</string>
+    <string name="project_license">Licencia na projekt</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Prispejte kódom do projektu. Všetci sú vítaní, vrátane nováčikov</string>
+    <string name="project_team">Projektová skupina</string>
+    <string name="contributors_public_add_yourself_description">Zobraziť informácie o prispievateľovi. Poskytnite ho, aby sa tu zobrazoval na základe prihlásenia po príspevku</string>
     <string name="always_use_current_date_and_time">Vzdycky vyuzivaj sucasny datum a cas</string>
     <string name="amount_of_space_for_tab">Pocet medzier po pouzity tabulatora</string>
     <string name="always_open_with_this_app">Vzdycky otvaraj touto aplikaciou</string>
