[ci skip] Update translations (Macedonian)

--- a/app/src/main/res/values-mk/strings.xml
+++ b/app/src/main/res/values-mk/strings.xml
@@ -166,8 +166,16 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_source_licenses">Лиценци за отворен код</string>
     <string name="rate_this_app">Оценете ја оваа апликација</string>
     <string name="translate">Преведи</string>
+    <string name="more_info_and_help">Повеќе информации и помош</string>
+    <string name="report_bugs">Пријавете грешки</string>
+    <string name="join_community">Придружете се на заедницата</string>
+    <string name="bug_reports_suggest_improvements">Дајте повратни информации, пријавете грешки или предложете подобрувања</string>
+    <string name="help_translating_this_app">Преведете ја оваа апликација на други јазици</string>
     <string name="source_code">Изворен код</string>
     <string name="project_license">Лиценца на проект</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Придонесете код во проектот. Секој е добредојден да го стори тоа, вклучително и новодојденците</string>
+    <string name="project_team">Проектен тим</string>
+    <string name="contributors_public_add_yourself_description">Прикажи информации за соработниците. Обезбедете да се прикаже овде врз основа на пријавување откако ќе придонесете</string>
     <string name="descending">опаѓачки</string>
     <string name="ascending">растечки</string>
     <string name="location">Локација</string>
@@ -178,8 +186,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="recently_viewed_documents">Неодамнешно видени документи</string>
     <string name="details">Детали</string>
     <string name="calendar">Календар</string>
+    <string name="error_picture_selection">Нема избрана, сликана или зачувана слика.</string>
     <string name="gallery_picture">Слика од галерија</string>
     <string name="camera_picture">Слика од камера</string>
+    <string name="edit_picture">Уреди слика</string>
+    <string name="miscellaneous">Разно</string>
     <string name="color">Боја</string>
     <string name="foreground">Предност</string>
     <string name="background">Позадина</string>
