[ci skip] Update translations (Serbian (Latin))

--- a/app/src/main/res/values-sr-rRS/strings.xml
+++ b/app/src/main/res/values-sr-rRS/strings.xml
@@ -24,12 +24,33 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language_change_restart_description">Promijeni jezik ove aplikacije. Restartuj apikaciju da bi podešavanja dobila efekat.</string>
     <string name="language">Jezik</string>
     <string name="size">Veličina</string>
+    <string name="contribute">Doprinesi</string>
     <string name="donate">Doniraj</string>
     <string name="exit">Izadji</string>
+    <string name="more">Više</string>
+    <string name="help">Pomoć</string>
+    <string name="main_view">Glavni prikaz</string>
     <string name="other">Drugo</string>
+    <string name="general">Opšte</string>
+    <string name="open_source_licenses">Licence otvorenog izvora</string>
+    <string name="rate_this_app">Ocenite ovu aplikaciju</string>
+    <string name="translate">Prevedi</string>
+    <string name="more_info_and_help">Više informacija i pomoć</string>
+    <string name="report_bugs">Prijavi bagove</string>
+    <string name="join_community">Pridružite se zajednici</string>
+    <string name="bug_reports_suggest_improvements">Davanje povratnih informacija, greške u izveštaju ili predlaganje poboljšanja</string>
+    <string name="help_translating_this_app">Prevođenje ove aplikacije na druge jezike</string>
+    <string name="source_code">Izvorni kod</string>
+    <string name="project_license">Licenca projekta</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Šifra doprinosa projektu. Svi su dobrodošli da to urade, uključujući i pridošlice</string>
+    <string name="project_team">Projektni tim</string>
+    <string name="contributors_public_add_yourself_description">Prikažite informacije o saradniku. Obezbedite da bude prikazan ovde na osnovu saglasnosti nakon doprinosa</string>
     <string name="error_picture_selection">Nijedna slika nije oznacena.</string>
+    <string name="edit_picture">Uređivanje slike</string>
     <string name="miscellaneous">Ostalo</string>
     <string name="background">Pozadina</string>
+    <string name="font">Font</string>
+    <string name="close">Zatvori</string>
     <string name="favourite">Omiljeno</string>
     <string name="rotate">Rotiraj</string>
 </resources>
