[ci skip] Update translations (Urdu (Pakistan))

--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -62,14 +62,34 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="language">زبان</string>
     <string name="deleteme____1">نام</string>
     <string name="size">سائز</string>
+    <string name="contribute">تعاون کریں</string>
     <string name="donate">عطیہ کریں</string>
     <string name="exit">بند کریں</string>
+    <string name="more">مزید</string>
     <string name="help">مدد</string>
     <string name="list">فہرست</string>
+    <string name="main_view">مین ویو</string>
     <string name="other">دیگر</string>
+    <string name="general">جنرل</string>
+    <string name="open_source_licenses">سورس لایسنسز کو کھولیں</string>
+    <string name="rate_this_app">اس ایپ کو ریٹ کریں</string>
+    <string name="translate">ترجمہ کریں</string>
+    <string name="more_info_and_help">مزید معلومات اور مدد کریں</string>
+    <string name="report_bugs">کیڑے رپورٹ کریں</string>
+    <string name="join_community">برادری میں شامل ہوں</string>
+    <string name="bug_reports_suggest_improvements">آراء دیں ، کیڑے رپورٹ کریں یا بہتری کی تجویز کریں</string>
+    <string name="help_translating_this_app">اس ایپ کو دوسری زبانوں میں ترجمہ کریں</string>
+    <string name="source_code">سورس کوڈ</string>
+    <string name="project_license">پروجیکٹ لائسنس</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">پروجیکٹ میں کوڈ کا تعاون کریں. ہر ایک کا استقبال ہے ، بشمول نئے آنے والے</string>
+    <string name="project_team">پروجیکٹ ٹیم</string>
+    <string name="contributors_public_add_yourself_description">شراکت دار کی معلومات دکھائیں. تعاون کرنے کے بعد آپٹ ان بنیاد پر اسے دکھایا جائے</string>
     <string name="error_picture_selection">کوئی تصویر سیلیکٹ، کھنچی یا محفوظ نہیں کی گئی.</string>
+    <string name="edit_picture">تصویر میں ترمیم کریں</string>
     <string name="miscellaneous">منفرق مضامین</string>
     <string name="background">پس منظر</string>
     <string name="font">فونٹ</string>
+    <string name="close">بند کریں</string>
+    <string name="favourite">پسندیدہ</string>
     <string name="rotate">گھمائیں</string>
 </resources>
