[ci skip] Update translations (Galician)

--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -79,8 +79,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="open_with">Abrir con</string>
     <string name="sort_by">Ordenar por</string>
     <string name="deleteme____1">Nome</string>
+    <string name="size">Tamaño</string>
+    <string name="contribute">Colaborar</string>
     <string name="donate">Doar</string>
+    <string name="exit">Saír</string>
     <string name="more">Máis</string>
+    <string name="help">Axuda</string>
+    <string name="main_view">Vista principal</string>
     <string name="remember_last_directory">Lembrar o último cartafol</string>
     <string name="syntax_highlighting">Realzado de sintaxe</string>
     <string name="highlighting_delay">Aprazamento do realzado de sintaxe</string>
@@ -102,12 +107,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="append_contexts_and_projects">Engadir contextos e proxectos</string>
     <string name="general">Xeral</string>
     <string name="default_">Por omisión</string>
+    <string name="open_source_licenses">Licenzas de código aberto</string>
+    <string name="rate_this_app">Avalía esta aplicación</string>
+    <string name="translate">Traducir</string>
+    <string name="more_info_and_help">Máis información e axuda</string>
     <string name="report_bugs">Reporte erros</string>
+    <string name="join_community">Únete á comunidade</string>
+    <string name="bug_reports_suggest_improvements">Dar comentarios, informar erros ou suxerir melloras</string>
+    <string name="help_translating_this_app">Traducir esta aplicación noutros idiomas</string>
+    <string name="source_code">Código fonte</string>
+    <string name="project_license">Licencia de proxecto</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Contribuír código ao proxecto. Todo o mundo é benvido para facelo, incluídos os recén chegados</string>
+    <string name="project_team">Equipo de proxecto</string>
+    <string name="contributors_public_add_yourself_description">Amosar información do colaborador. Proporcione que se mostre aquí de xeito opt-in despois de contribuír</string>
+    <string name="error_picture_selection">Non hai ningunha imaxe seleccionada, tomada ou gardada.</string>
+    <string name="edit_picture">Editar imaxe</string>
     <string name="miscellaneous">Varios</string>
+    <string name="background">Segundo plano</string>
     <string name="folder">Cartafol</string>
+    <string name="font">Fonte</string>
     <string name="close">Pechar</string>
     <string name="cancel">Cancelar</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">Gústache este proxecto? Queres que siga mellorando e resolvendo os problemas?\n\nDesenvolver aplicacións e escribir a documentación leva moito tempo! Se queres apoiar ao proxecto para que continúe, por favor, considera facer unha pequena doazón!\n\nEste proxecto desenvólvese no tempo libre, ofrécese libre e gratuitamente e sen publicidade!</string>
+    <string name="favourite">Favorito</string>
     <string name="reload">Actualizar</string>
+    <string name="rotate">Xirar</string>
     <string name="error_could_not_open_file">Erro: non se puido abrir o ficheiro.</string>
 </resources>
