--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -107,4 +107,28 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="current_date">বর্তমান তারিখ</string>
     <string name="add_task">কার্য সংযোজন করুন</string>
     <string name="add_x_witharg">%s সংযোজন করুন</string>
+    <string name="main_view">প্রধান দৃশ্য</string>
+    <string name="other">অন্যান্য</string>
+    <string name="general">সাধারণ</string>
+    <string name="open_source_licenses">ওপেন সোর্স লাইসেন্স</string>
+    <string name="rate_this_app">অ্যাপ কে রেটিং দিন</string>
+    <string name="translate">অনুবাদ</string>
+    <string name="more_info_and_help">আরো তথ্য এবং সাহায্য</string>
+    <string name="report_bugs">বাগ রিপোর্ট করুন</string>
+    <string name="join_community">সম্প্রদায়ে যোগ দিন</string>
+    <string name="bug_reports_suggest_improvements">প্রতিক্রিয়া দিন, বাগ রিপোর্ট করুন বা উন্নতির পরামর্শ দিন</string>
+    <string name="help_translating_this_app">এই অ্যাপটিকে অন্য ভাষায় অনুবাদ করুন</string>
+    <string name="source_code">সোর্স কোড</string>
+    <string name="project_license">প্রকল্প লাইসেন্স</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">প্রকল্পে কোড অবদান. নতুনদের সহ সবাইকে তা করতে স্বাগত জানাই</string>
+    <string name="project_team">প্রকল্পের দল</string>
+    <string name="contributors_public_add_yourself_description">অবদানকারীর তথ্য দেখান। অবদান করার পরে একটি অপ্ট-ইন ভিত্তিতে এটি এখানে দেখানোর জন্য প্রদান করুন</string>
+    <string name="error_picture_selection">কোনো ছবি নির্বাচিত, তোলা বা সংরক্ষণ করা হয়নি।.</string>
+    <string name="edit_picture">ছবি সম্পাদনা করুন</string>
+    <string name="miscellaneous">বিবিধ</string>
+    <string name="background">পটভূমি সমেত</string>
+    <string name="font">ফন্ট</string>
+    <string name="close">বন্ধ করুন</string>
+    <string name="favourite">পছন্দ</string>
+    <string name="rotate">আবর্তিত</string>
 </resources>
