[ci skip] Update translations (Filipino)

--- a/app/src/main/res/values-fil/strings.xml
+++ b/app/src/main/res/values-fil/strings.xml
@@ -306,5 +306,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">I-soft break kung hindi kakasya sa lapad ng screen ang teksto. Kung ayaw, i-enable ang pag-i-scroll na pahiga.</string>
     <string name="always_open_with_this_app">Palaging buksan sa app na ito</string>
     <string name="always_open_files_with_this_app_when_list_contains_file_extension">Palaging buksan ang mga file sa app na ito kung ang listahan ay mayroon mga file extension. Gamitin ang \'Wala, .html, .css, .js\' bilang halimbawa kung gusto mong baguhin ang mga web file at yung mga walang file extension.</string>
+    <string name="rotate">Paikutin</string>
     <string name="template">Template</string>
 </resources>
