--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -15,6 +15,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="editor">Redaktori</string>
     <string name="about">Rreth</string>
     <string name="create">Krijo</string>
+    <string name="hide_statusbar">Fshih shiritin e statusit</string>
     <string name="contributors">Kontribuesit</string>
     <string name="licenses">Licensa</string>
     <string name="changelog">Ndryshim</string>
@@ -31,4 +32,25 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="main_view">Pamja kryesore</string>
     <string name="other">TJERA</string>
     <string name="general">Gjeneral</string>
+    <string name="open_source_licenses">Licencat me burim të hapur</string>
+    <string name="rate_this_app">Vlerëso këtë aplikacion</string>
+    <string name="translate">Përkthimet</string>
+    <string name="more_info_and_help">Më shumë informacion dhe ndihmë</string>
+    <string name="report_bugs">Raportoni gabimet</string>
+    <string name="join_community">Bashkohu komunitetit</string>
+    <string name="bug_reports_suggest_improvements">Jepni komente, raportoni gabime ose sugjeroni përmirësime</string>
+    <string name="help_translating_this_app">Përkthejeni këtë aplikacion në gjuhë të tjera</string>
+    <string name="source_code">Kodi burimor</string>
+    <string name="project_license">Licenca e projektit</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Kontribuoni kodin në projekt. Të gjithë janë të mirëpritur ta bëjnë këtë, përfshirë të sapoardhurit</string>
+    <string name="project_team">Ekipi i projektit</string>
+    <string name="contributors_public_add_yourself_description">Shfaq informacionin e kontribuesit. Siguroni që të shfaqet këtu në bazë të zgjedhjes pasi të kontribuoni</string>
+    <string name="error_picture_selection">Asnjë foto nuk është zgjedhur, marrë apo ruajtur.</string>
+    <string name="edit_picture">Redakto foton</string>
+    <string name="miscellaneous">Të ndryshme</string>
+    <string name="background">Sfondi</string>
+    <string name="font">Shkronja</string>
+    <string name="close">Mbyll</string>
+    <string name="favourite">Të preferuarat</string>
+    <string name="rotate">Rrotullo</string>
 </resources>
