--- a/app/src/main/res/values-af/strings.xml
+++ b/app/src/main/res/values-af/strings.xml
@@ -18,6 +18,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="editor">Redigeerder</string>
     <string name="about">Omtrent</string>
     <string name="create">Skep</string>
+    <string name="hide_statusbar">Versteek statusbalk</string>
     <string name="contributors">Bydraers</string>
     <string name="licenses">Lisensies</string>
     <string name="changelog">Verandering-log</string>
@@ -39,8 +40,23 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="rate_this_app">Beoordeel hierdie toepassing</string>
     <string name="translate">Vertaal</string>
     <string name="more_info_and_help">Meer inligting en hulp</string>
+    <string name="report_bugs">Rapporteer foute</string>
+    <string name="join_community">Sluit aan by die gemeenskap</string>
+    <string name="bug_reports_suggest_improvements">Gee terugvoering, rapporteer foute of stel verbeterings voor</string>
+    <string name="help_translating_this_app">Vertaal hierdie app in ander tale</string>
+    <string name="source_code">Bronkode</string>
+    <string name="project_license">Projeklisensie</string>
+    <string name="contribute_code_to_this_project_anybody_welcome">Dra kode by tot die projek. Almal is welkom om dit te doen, insluitend nuwelinge</string>
+    <string name="project_team">Projekspan</string>
+    <string name="contributors_public_add_yourself_description">Wys bydraerinligting. Verskaf dit om hier op \'n opt-in-basis te wys nadat dit bygedra het</string>
+    <string name="error_picture_selection">Geen foto gekies, geneem of gered nie.</string>
+    <string name="edit_picture">Bewerk prentjie</string>
     <string name="miscellaneous">Diverse</string>
+    <string name="background">Agtergrond</string>
+    <string name="font">Lettertipe</string>
     <string name="close">Sluit</string>
     <string name="cancel">Kanselleer</string>
+    <string name="favourite">Gunsteling</string>
     <string name="reload">Herlaai</string>
+    <string name="rotate">Roteer</string>
 </resources>
