--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -431,6 +431,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="due_today">Λήξη σήμερα</string>
     <string name="due_future">Εξόφληση στο μέλλον</string>
     <string name="completed">Ολοκληρώθηκε</string>
+    <string name="advanced_filtering">Προηγμένα φίλτρα</string>
     <string name="match_any">Ταίριασμα Οποιοδήποτε</string>
     <string name="match_all">Ταίριασμα Όλων</string>
     <string name="dynamic_notebook_root_links">Δυναμική αναζήτηση αρχής σημειωματάριου</string>
