[ci skip] Update translations (Odia)

--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -199,6 +199,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="view">ଦର୍ଶନ</string>
     <string name="view_mode">ଦର୍ଶନ ମୋଡ୍</string>
     <string name="edit_mode">ସମ୍ପାଦନ ମୋଡ୍‍</string>
+    <string name="favourite">ପ୍ରିୟ</string>
     <string name="please_wait">ଦୟାକରି ଅପେକ୍ଷା କରନ୍ତୁ</string>
     <string name="reload">ପୁନଃଲୋଡ୍ କରନ୍ତୁ</string>
     <string name="rotate">ଘୂର୍ଣ୍ଣନ କରନ୍ତୁ</string>
